infra/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beerlog
  template:
    metadata:
      labels:
        app: beerlog
    spec:
      containers:
      - name: beerlog
        image: ghcr.io/robbash/beerlog:0.2.6
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: regcred
