infra/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: beerlog
  ports:
    - name: http
      protocol: TCP
      port: 3000
  type: ClusterIP
